# AdventOfCode

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
2021/java/: README.md
2021/java/src/com/starling/advent2021/day1/: D1P1.java  D1P2.java
2021/java/src/com/starling/advent2021/day2/: D2P1.java  D2P2.java
2021/java/src/com/starling/advent2021/day4/: BingoCard.java  D4P1.java
2021/java/src/com/starling/advent2021/day5/: D5P1.java  D5P2.java  Line.java  Point.java  README.md
2021/java/src/com/starling/advent2021/day6/: D6P1.java  D6P2.java  Lanternfish.java  LanternfishSchool.java
2021/java/src/com/starling/advent2021/day7/: D7P1.java  (+1 more)
2022/cpp/: CMakeLists.txt  README.md  main.cpp
2022/cpp/Day01/: Day01.cpp
2022/cpp/Day02/: Day02.cpp  Day02.h
2022/cpp/Day03/: Day03.cpp
2022/cpp/Day04/: Day04.cpp  Day04.h
2022/cpp/Day05/: Day05.cpp  Day05.h
2022/cpp/Day06/: Day06.h
2024/cpp/: AOC24.cpp  AOC24.hpp  CMakeLists.txt  Solution24.cpp  Solution24.hpp  main.cpp
2024/cpp/Day01/: day01.cpp  day01.hpp
Day01/: Day01.h  DayOne.cpp  DayOne.h  calorieCount.cpp
Day02/: Day02.h  DayTwo.cpp  DayTwo.h
Day03/: Day03.h  DayThree.cpp  DayThree.h
Day04/: Day04.h  DayFour.cpp  DayFour.h
Day05/: Day05.h  DayFive.cpp  DayFive.h
Day06/: Day06.cpp
src/com/starling/advent2021/: Main.java
src/com/starling/advent2021/day3/: D3P1.java  D3P2.java
src/com/starling/advent2021/day4/: BingoGame.java  D4P1.java  D4P2.java
src/com/starling/advent2021/day5/: Line.java
src/com/starling/advent2021/day6/: D6P1.java  LanternfishSchool.java
(+3 files in other folders)
