cmake_minimum_required(VERSION 3.20)
project(AdventOfCode2022)

set(CMAKE_CXX_STANDARD 14)

add_executable(AdventOfCode2022 main.cpp Day01/Day01.cpp Day01/Day01.h Day02/Day02.cpp Day02/Day02.h Day03/Day03.cpp Day03/Day03.h Day04/Day04.cpp Day04/Day04.h Day05/Day05.cpp Day05/Day05.h Day06/Day06.cpp Day06/Day06.h)
